--- a/netflix.css
+++ b/netflix.css
@@ -98,12 +98,51 @@ button:hover{
     transition: 1s;
 }
 .tv{
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(/tv\ \(1\).png);
-    background-image: u;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),;
+    background-size: cover;
+    width: 80%;
+    height: 100%;
+    box-sizing: border-box;
+    margin: auto;
+    text-align: left;
+    padding-top: 100px;
 }
-.back-video{
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
+.row{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.text-col{
+    flex-basis: 50%;
+    margin-bottom: 20px;
+}
+.img-col{
+    flex-basis: 50%;
+    margin-bottom: 20px;
+    position: relative;
+    height: 500px;
+    width: 300px;
+}
+.img-col img,
+.img-col video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.tv h1{
+    font-size: 42px;
+    color: #fff;
+    text-align: left;
+    justify-content: left;
+    position: left;
+}
+.tv p{
+    font-size: 24px;
+    color: #fff;
+    margin-bottom: 20px;
+    text-align: left;
+    justify-content: left;
 }
